<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/headText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000"
        android:layout_centerVertical="true"
        android:layout_marginStart="80sp"
        android:layout_marginTop="-30dp"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#000"
        android:layout_centerVertical="true"
        android:layout_below="@+id/usernameText"
        android:layout_marginTop="30sp"
        android:layout_marginStart="80sp"/>

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorAccent"
        android:autofillHints="@string/username_edit"
        android:width="200sp"
        android:layout_centerVertical="true"
        android:layout_marginStart="200sp"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:autofillHints="@string/password_edit"
        android:textColor="@color/colorPrimary"
        android:shadowColor="@color/colorPrimary"
        android:width="200sp"
        android:layout_below="@+id/usernameEdit"
        android:layout_marginStart="200sp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEdit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignEnd="@+id/headText"
        android:layout_marginTop="-47dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="10dp"
        android:text="@string/camera" />

    <Button
        android:id="@+id/thirdActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEdit"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="23dp"
        android:text="@string/thirdActivity"/>

</RelativeLayout>